syntax = "proto3";

option csharp_namespace = "GrpcServiceCS.Grpc.Input";

package input;

service Input {
  rpc SomeFunction (SomeFunctionRequest) returns (SomeFunctionResponse);
}

message SomeFunctionRequest {
  string data = 1;
}

message SomeFunctionResponse {
  string data = 1;
}
